--- a/HospitalDBMS/web/views/layouts/default.pug
+++ b/HospitalDBMS/web/views/layouts/default.pug
@@ -1,5 +1,8 @@
 doctype html
 html
     include header
-        include ../components/nav
-        block content
+    block content
+      
+    .fixed-action-btn
+      a.btn-floating.btn-large.red(href="#")
+          i.large.material-icons arrow_upward
