--- a/HospitalDBMS/web/views/home.pug
+++ b/HospitalDBMS/web/views/home.pug
@@ -1,4 +1,18 @@
 extends ./layouts/default
 block content
-    div.container
-        include ./components/selection.pug
+    br
+    br
+    .container
+        .row
+            .col.s12
+                .card.blue-grey.darken-1.center.white-text
+                    .card-content
+                        h2 Welcome
+                        .card-action
+                            a.green.waves-effect.waves-light.btn-large(href="patients") Patients/Visitors
+                            br
+                            br
+                            a.blue.waves-effect.waves-light.btn-large(href="doctors") Doctors
+                            br
+                            br
+                            a.purple.waves-effect.waves-light.btn-large(href="staff") Staff
