--- a/HospitalDBMS/web/views/layouts/header.pug
+++ b/HospitalDBMS/web/views/layouts/header.pug
@@ -4,7 +4,7 @@ head
     //- link(rel="stylesheet", href="css/override.css")
     link(href="http://fonts.googleapis.com/icon?family=Material+Icons", rel="stylesheet")
     link(rel="icon", type="image/png", href="img/logo.png")
-body
+body.blue-grey.lighten-4
     script(type="text/javascript", src="https://code.jquery.com/jquery-2.1.1.min.js")
     script(type="text/javascript", src="http://d3js.org/d3.v3.js")
     script(type="text/javascript", src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.7/js/materialize.min.js")
