--- a/HospitalDBMS/web/views/records.pug
+++ b/HospitalDBMS/web/views/records.pug
@@ -1,6 +1,6 @@
 extends ./layouts/default
 block content
-  include ./components/doctornav
+  include ./components/nav
   .container
     h2 Patient Records
     .row
