--- a/HospitalDBMS/web/views/doctors.pug
+++ b/HospitalDBMS/web/views/doctors.pug
@@ -1,25 +1,25 @@
 extends ./layouts/default
 block content
-    include ./components/doctornav
+    include ./components/nav
     div.container
         h2 Doctors
         .row
           for department in departments
             .row
               .col.s12
-                .card.blue.darken-4.white-text
+                .card.blue-grey.darken-4.white-text
                   .card-content
                     span.card-title= "Department #"+department.Dno+": "+department.DName
                     .row
                       for doctor in doctors
                         if department.Dno==doctor.Dno
                           .col.s12.m4
-                            .card.blue.darken-3
+                            .card.blue-grey.darken-3
                                 .card-content.white-text
                                     span.card-title= doctor.DoctorName
-                                    ul.collection.blue
-                                        li.collection-item.blue.darken-1= "SSN: "+doctor.Ssn
-                                        li.collection-item.blue.darken-1= "Gender: "+doctor.Gender
-                                        li.collection-item.blue.darken-1= "Date of Birth: "+doctor.BirthDate.toLocaleDateString()
-                                        li.collection-item.blue.darken-1= "Address: "+doctor.Address
-                                        li.collection-item.blue.darken-1= "Telephone: "+doctor.Telephone
+                                    ul.collection.blue-grey
+                                        li.collection-item.blue-grey.darken-1= "SSN: "+doctor.Ssn
+                                        li.collection-item.blue-grey.darken-1= "Gender: "+doctor.Gender
+                                        li.collection-item.blue-grey.darken-1= "Date of Birth: "+doctor.BirthDate.toLocaleDateString()
+                                        li.collection-item.blue-grey.darken-1= "Address: "+doctor.Address
+                                        li.collection-item.blue-grey.darken-1= "Telephone: "+doctor.Telephone
