--- a/HospitalDBMS/web/views/home.pug
+++ b/HospitalDBMS/web/views/home.pug
@@ -9,10 +9,10 @@ block content
           .card-content
             h2 Welcome
             .card-action
-              a.green.waves-effect.waves-light.btn-large(href="patients") Patients/Visitors
+              a.green.waves-effect.waves-light.btn-large(href="patients/patients") Patients/Visitors
               br
               br
-              a.blue.waves-effect.waves-light.btn-large(href="doctors") Doctors
+              a.blue.waves-effect.waves-light.btn-large(href="doctors/doctors") Doctors
               br
               br
-              a.purple.waves-effect.waves-light.btn-large(href="staff") Staff
+              a.purple.waves-effect.waves-light.btn-large(href="staff/staff") Staff
