--- a/HospitalDBMS/web/views/numpatients.pug
+++ b/HospitalDBMS/web/views/numpatients.pug
@@ -1,12 +1,12 @@
 extends ./layouts/default
-block content
-    include ./components/patientnav
+block content   
+    include ./components/nav
     .container
         h2 Number of Patients Per Department    
         .row
             for entry in num_patients_department
                 .col.s12.m6                
-                    .card.green.darken-2
+                    .card.blue-grey.darken-2
                         .card-content.white-text
                             span.card-title= 'Department #'+entry.Dno +  ": " + entry.DName
                             p.card-content= "# of Patients: "+entry.numPatients
