Changed colour pallete to custom color set

--- a/HospitalDBMS/web/views/components/doctornav.pug
+++ b/HospitalDBMS/web/views/components/doctornav.pug
@@ -11,5 +11,5 @@ ul#dropdown1.dropdown-content
 script.
     $(document).ready(function() {
         $(".dropdown-button").dropdown();
-        $('nav').addClass('blue');
+        $('nav').addClass('doctor');
     });
