--- a/HospitalDBMS/web/views/components/patientnav.pug
+++ b/HospitalDBMS/web/views/components/patientnav.pug
@@ -9,5 +9,5 @@ ul#dropdown1.dropdown-content
 script.
     $(document).ready(function() {
         $(".dropdown-button").dropdown();
-        $('nav').addClass('green');
+        $('nav').addClass('patient');
     });
