--- a/HospitalDBMS/web/views/home.pug
+++ b/HospitalDBMS/web/views/home.pug
@@ -5,14 +5,14 @@ block content
   .container
     .row
       .col.s12
-        .card.blue-grey.darken-1.center.white-text
+        .card.primary.center.white-text
           .card-content
             h2 Welcome
             .card-action
-              a.green.waves-effect.waves-light.btn-large(href="patients/patients") Patients/Visitors
+              a.patient.waves-effect.waves-light.btn-large(href="patients/patients") Patients/Visitors
               br
               br
-              a.blue.waves-effect.waves-light.btn-large(href="doctors/doctors") Doctors
+              a.doctor.waves-effect.waves-light.btn-large(href="doctors/doctors") Doctors
               br
               br
-              a.purple.waves-effect.waves-light.btn-large(href="staff/staff") Staff
+              a.staff.waves-effect.waves-light.btn-large(href="staff/staff") Staff
