--- a/HospitalDBMS/web/views/numpatients.pug
+++ b/HospitalDBMS/web/views/numpatients.pug
@@ -6,7 +6,7 @@ block content
         .row
             for entry in num_patients_department
                 .col.s12.m6                
-                    .card.blue-grey.darken-2
+                    .card.primary
                         .card-content.white-text
                             span.card-title= 'Department #'+entry.Dno +  ": " + entry.DName
                             p.card-content= "# of Patients: "+entry.numPatients
