--- a/HospitalDBMS/web/views/patient_selection.pug
+++ b/HospitalDBMS/web/views/patient_selection.pug
@@ -5,7 +5,7 @@ block content
     h2 Patient Lookup
     .row
       .col.s12
-        .card.blue-grey.darken-2
+        .card.primary.darken-1
           .card-content.white-text
             span.card-title Select Patient
             .row
@@ -17,12 +17,12 @@ block content
                 label(for="patient_select")
 
       .col.s12
-        .card.blue-grey.darken-2
+        .card.primary.darken-1
           .card-content.white-text
             span.card-title Patient info
             ul.collection
-              li.blue-grey.collection-item#name
-              li.blue-grey.collection-item#room
+              li.primary.collection-item#name
+              li.primary.collection-item#room
     
     script.
       $(document).ready(function () {
