--- a/HospitalDBMS/web/views/components/staffnav.pug
+++ b/HospitalDBMS/web/views/components/staffnav.pug
@@ -7,5 +7,5 @@ ul#dropdown1.dropdown-content
 script.
     $(document).ready(function() {
         $(".dropdown-button").dropdown();
-        $('nav').addClass('purple');
+        $('nav').addClass('staff');
     });
