--- a/HospitalDBMS/web/views/departments.pug
+++ b/HospitalDBMS/web/views/departments.pug
@@ -4,11 +4,11 @@ block content
   .container        
     h2 Departments
     for department in departments
-      .card.green.darken-2
+      .card.primary.darken-2
         .card-content
           span.card-title= department.DName
           ul.collection.dep(id=department.Dno)
             for room in rooms
               if room.Dno==department.Dno
-                li.collection-item.green= "Room #: "+room.Rno
-                li.collection-item.green= "Room Name: "+room.RName                     
+                li.collection-item.primary= "Room #: "+room.Rno
+                li.collection-item.primary= "Room Name: "+room.RName                     
