--- a/HospitalDBMS/web/views/doctors.pug
+++ b/HospitalDBMS/web/views/doctors.pug
@@ -7,19 +7,19 @@ block content
           for department in departments
             .row
               .col.s12
-                .card.blue-grey.darken-4.white-text
+                .card.secondary.white-text
                   .card-content
                     span.card-title= "Department #"+department.Dno+": "+department.DName
                     .row
                       for doctor in doctors
                         if department.Dno==doctor.Dno
                           .col.s12.m4
-                            .card.blue-grey.darken-3
+                            .card.primary.darken-1
                                 .card-content.white-text
                                     span.card-title= doctor.DoctorName
-                                    ul.collection.blue-grey
-                                        li.collection-item.blue-grey.darken-1= "SSN: "+doctor.Ssn
-                                        li.collection-item.blue-grey.darken-1= "Gender: "+doctor.Gender
-                                        li.collection-item.blue-grey.darken-1= "Date of Birth: "+doctor.BirthDate.toLocaleDateString()
-                                        li.collection-item.blue-grey.darken-1= "Address: "+doctor.Address
-                                        li.collection-item.blue-grey.darken-1= "Telephone: "+doctor.Telephone
+                                    ul.collection.primary
+                                        li.collection-item.primary= "SSN: "+doctor.Ssn
+                                        li.collection-item.primary= "Gender: "+doctor.Gender
+                                        li.collection-item.primary= "Date of Birth: "+doctor.BirthDate.toLocaleDateString()
+                                        li.collection-item.primary= "Address: "+doctor.Address
+                                        li.collection-item.primary= "Telephone: "+doctor.Telephone
