--- a/HospitalDBMS/web/views/layouts/header.pug
+++ b/HospitalDBMS/web/views/layouts/header.pug
@@ -3,8 +3,9 @@ head
     link(rel="stylesheet", href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.7/css/materialize.min.css")
     //- link(rel="stylesheet", href="css/override.css")
     link(href="http://fonts.googleapis.com/icon?family=Material+Icons", rel="stylesheet")
-    link(rel="icon", type="image/png", href="img/logo.png")
-body.blue-grey.lighten-4
+    link(rel="icon", type="image/png", href="/img/logo.png")
+    link(rel="stylesheet", type="text/css", href="/css/style.css")
+body
     script(type="text/javascript", src="https://code.jquery.com/jquery-2.1.1.min.js")
     script(type="text/javascript", src="http://d3js.org/d3.v3.js")
     script(type="text/javascript", src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.7/js/materialize.min.js")
