--- a/HospitalDBMS/web/views/staff.pug
+++ b/HospitalDBMS/web/views/staff.pug
@@ -7,19 +7,19 @@ block content
         for department in departments
           .row
             .col.s12
-              .card.blue-grey.darken-4.white-text
+              .card.primary.secondary.white-text
                 .card-content
                   span.card-title= "Department #"+department.Dno+": "+department.DName
                   .row
                     for emp in staff
                       if department.Dno==emp.Dno
                         .col.s12.m4
-                          .card.blue-grey.darken-3
+                          .card.primary.darken-1
                               .card-content.white-text
                                   span.card-title= emp.SName
-                                  ul.collection.blue-grey
-                                      li.collection-item.blue-grey.darken-1= "SSN: "+emp.Ssn
-                                      li.collection-item.blue-grey.darken-1= "Gender: "+emp.Gender
-                                      li.collection-item.blue-grey.darken-1= "Date of Birth: "+emp.BirthDate.toLocaleDateString()
-                                      li.collection-item.blue-grey.darken-1= "Address: "+emp.Address
-                                      li.collection-item.blue-grey.darken-1= "Telephone: "+emp.Telephone
+                                  ul.collection.primary
+                                      li.collection-item.primary= "SSN: "+emp.Ssn
+                                      li.collection-item.primary= "Gender: "+emp.Gender
+                                      li.collection-item.primary= "Date of Birth: "+emp.BirthDate.toLocaleDateString()
+                                      li.collection-item.primary= "Address: "+emp.Address
+                                      li.collection-item.primary= "Telephone: "+emp.Telephone
