--- a/HospitalDBMS/web/views/patients.pug
+++ b/HospitalDBMS/web/views/patients.pug
@@ -5,7 +5,7 @@ block content
     h2 Patients
     .row
       for patient in patients
-        .col.s12.m4
+        .col.s12.m6.l4
           .card.primary.darken-1
             .card-content.white-text
               span.card-title= patient.PName
