--- a/HospitalDBMS/web/views/components/staffnav.pug
+++ b/HospitalDBMS/web/views/components/staffnav.pug
@@ -4,8 +4,13 @@ ul#dropdown1.dropdown-content
     li
         a(href="/patientlookup") Patient Lookup
 
+ul#dropdown2.dropdown-content
+    li
+        a(href="/patients") All
+    li
+        a(href="/patientlookup") Patient Lookup
+
 script.
     $(document).ready(function() {
-        $(".dropdown-button").dropdown();
         $('nav').addClass('staff');
     });
