--- a/HospitalDBMS/web/views/components/staffnav.pug
+++ b/HospitalDBMS/web/views/components/staffnav.pug
@@ -1,14 +1,10 @@
 ul#dropdown1.dropdown-content
     li
-        a(href="/patients") All
-    li
-        a(href="/patientlookup") Patient Lookup
+        a(href="patientlookup") Patient Lookup
 
 ul#dropdown2.dropdown-content
     li
-        a(href="/patients") All
-    li
-        a(href="/patientlookup") Patient Lookup
+        a(href="patientlookup") Patient Lookup
 
 script.
     $(document).ready(function() {
