--- a/HospitalDBMS/web/views/home.pug
+++ b/HospitalDBMS/web/views/home.pug
@@ -9,7 +9,7 @@ block content
           .card-content
             h2 Welcome
             .card-action
-              a.patient.waves-effect.waves-light.btn-large(href="patients/patients") Patients/Visitors
+              a.patient.waves-effect.waves-light.btn-large(href="patients/patientlookup") Patients/Visitors
               br
               br
               a.doctor.waves-effect.waves-light.btn-large(href="doctors/doctors") Doctors
