--- a/HospitalDBMS/web/views/patientsByDoctor.pug
+++ b/HospitalDBMS/web/views/patientsByDoctor.pug
@@ -5,13 +5,32 @@ block content
         h2 Patients By Doctor   
         .row
             for doctor in doctors
-              .col.s12.m6                
-                  .card.primary
-                      .card-content.white-text
-                          span.card-title= 'Doctor Name:'+ doctor.DoctorName
-                          for patient in patients
-                            if patient.PName != null
-                              p.primary.darken-1.card-content No Patients
-                            else
-                              p.primary.darken-1.card-content= "Patient Name: "+patient.PName
+              .col.s12               
+                .card.secondary
+                    .card-content.white-text
+                        span.card-title= 'Doctor Name:'+ doctor.DoctorName
+                        .row
+                            for patient in patients
+                                if patient.DSsn==doctor.Ssn
+                                    .col.s12.m4
+                                        .card.primary.darken-1
+                                            .card-content.white-text
+                                                span.card-title= "Patient Name: "+patient.PName
+                                                ul.collection.primary
+                                                    li.collection-item.primary= "Start: "+patient.Start_Date.toLocaleDateString()
+                                                    if patient.End_Date != '0000-00-00 00:00:00'
+                                                        li.collection-item.primary= "End: "+patient.End_Date_Date.toLocaleDateString()
+                                                    li.collection-item.primary= "Address: "+patient.Address
+                                                    li.collection-item.primary= "Telephone: "+patient.Telephone
+                                                    li.collection-item.primary= "Gender: "+patient.Gender
+                                                    li.collection-item.primary= "Date of Birth: "+patient.BirthDate.toLocaleDateString()
+    script.
+        $(document).ready(function() {
+            $('.records').each(function( index ) {
+                if (!$(this).text())
+                $(this).parent().parent().parent().remove();
+            });
+        });                                          
+
+                          
                   
