--- a/HospitalDBMS/web/views/AvailableRoomsView.pug
+++ b/HospitalDBMS/web/views/AvailableRoomsView.pug
@@ -6,9 +6,9 @@ block content
     .row
       for A in AvailableRooms
         .col.s12.m6.l4
-          .card.primary.darken-1
+          .card.pink.darken-1
             .card-content.white-text
               span.card-title= A.Rno
               ul.collection.primary
-                li.collection-item.primary= "Room Name: "+ A.RName
-                li.collection-item.primary= "Dep No: "+ A.Dno
+                li.collection-item.pink.darken-4= "Room Name: "+ A.RName
+                li.collection-item.pink.darken-4= "Dep No: "+ A.Dno
