--- a/HospitalDBMS/web/views/DepartmentSeniorView.pug
+++ b/HospitalDBMS/web/views/DepartmentSeniorView.pug
@@ -6,9 +6,9 @@ block content
     .row
       for name in DepartmentSenior
         .col.s12.m6.l4
-          .card.primary.darken-1
+          .card.blue.darken-1
             .card-content.white-text
               span.card-title= name.DoctorName
               ul.collection.primary
-                li.collection-item.primary= "Total time worked: "+ name.asTtimeWorked
+                li.collection-item.blue.darken-4= "Total time worked: "+ name.asTtimeWorked
                 
