--- a/HospitalDBMS/web/views/LargeSalaryPositionsView.pug
+++ b/HospitalDBMS/web/views/LargeSalaryPositionsView.pug
@@ -6,6 +6,6 @@ block content
     .row
       for position in LargeSalaryPositions
         .col.s12.m6.l4
-          .card.primary.darken-1
+          .card.teal.darken-1
             .card-content.white-text
               span.card-title= position.Sposition
