--- a/HospitalDBMS/web/views/PatientsInRoomsView.pug
+++ b/HospitalDBMS/web/views/PatientsInRoomsView.pug
@@ -6,7 +6,7 @@ block content
     .row
       for patient in PatientsInRooms
         .col.s12.m6.l4
-          .card.primary.darken-1
+          .card.green.darken-1
             .card-content.white-text
               span.card-title= patient.HCN
               ul.collection.primary
