--- a/HospitalDBMS/web/views/PayRollView.pug
+++ b/HospitalDBMS/web/views/PayRollView.pug
@@ -6,7 +6,7 @@ block content
     .row
       for sal in PayRoll
         .col.s12.m6.l4
-          .card.primary.darken-1
+          .card.orange.darken-1
             .card-content.white-text
-              span.card-title= sal.Sum_Salary
+              span.card-title= "$" + sal.Sum_Salary
               
