--- a/HospitalDBMS/web/views/GoodStaffByDeptView.pug
+++ b/HospitalDBMS/web/views/GoodStaffByDeptView.pug
@@ -6,8 +6,8 @@ block content
     .row
       for Staff in GoodStaffByDept
         .col.s12.m6.l4
-          .card.primary.darken-1
+          .card.deep-purple
             .card-content.white-text
               span.card-title= Staff.DoctorName
               ul.collection.primary
-                li.collection-item.primary= "Telephone: " + Staff.Telephone
+                li.collection-item.deep-purple.darken-4= "Telephone: " + Staff.Telephone
