--- a/HospitalDBMS/web/views/RoomInfoView.pug
+++ b/HospitalDBMS/web/views/RoomInfoView.pug
@@ -1,16 +1,17 @@
 extends ./layouts/default
 block content
+  include ./components/nav
   div.container
     h2 Room Info
     .row
       for room in RoomInfo
         .col.s12.m6.l4
-          .card.primary.darken-1
+          .card.light-blue.darken-1
             .card-content.white-text
-              span.card-title= room.Dno
+              span.card-title= "Department Number: " + room.Dno
               ul.collection.primary
-                li.collection-item.primary= "Room number: "+room.Rno
-                li.collection-item.primary= "Room Name: "+room.RName
-                li.collection-item.primary= "Health Card Num: "+ room.Hcn
-                li.collection-item.primary= "Patient Name: "+room.PName
+                li.collection-item.light-blue.darken-4= "Room number: "+room.Rno
+                li.collection-item.light-blue.darken-4= "Room Name: "+room.RName
+                li.collection-item.light-blue.darken-4= "Health Card Num: "+ room.Hcn
+                li.collection-item.light-blue.darken-4= "Patient Name: "+room.PName
                 
