--- a/HospitalDBMS/web/public/css/style.css
+++ b/HospitalDBMS/web/public/css/style.css
@@ -50,3 +50,9 @@ body{
 .secondary{
   background-color: #587B7F !important;
 }
+
+i{
+  display:flex;
+  align-self: center;
+  border-radius: 0.2em;
+}
