Moved misc view stuff to misc folders. Added generic grouping function.

--- a/HospitalDBMS/web/views/misc/GoodStaffByDeptView.pug
+++ b/HospitalDBMS/web/views/misc/GoodStaffByDeptView.pug
@@ -1,6 +1,6 @@
-extends ./layouts/default
+extends ../layouts/default
 block content
-  include ./components/nav
+  include ../components/nav
   div.container
     h2 Good Staff By Department
     .row
