--- a/HospitalDBMS/web/views/misc/AvailableRoomsView.pug
+++ b/HospitalDBMS/web/views/misc/AvailableRoomsView.pug
@@ -1,6 +1,6 @@
-extends ./layouts/default
+extends ../layouts/default
 block content
-  include ./components/nav
+  include ../components/nav
   div.container
     h2 Available Rooms
     .row
