--- a/HospitalDBMS/web/views/records.pug
+++ b/HospitalDBMS/web/views/records.pug
@@ -4,31 +4,24 @@ block content
   .container
     h2 Patient Records
     .row
-      for patient in patients
+      each patient, index in patients
         .col.s12
           .card.secondary
             .card-content.white-text
-              span.card-title="Patient Name: "+patient.PName
-              p= "HCN: "+patient.Hcn
-              .row.records
-                for record in records
-                  if patient.Hcn==record.PHcn
-                      .col.s12.m4
-                        .card.primary.darken-1
-                          .card-content
-                            span.card-title= "Case #: "+record.CaseN
-                            ul.collection.primary
-                              li.collection-item.primary= "Illnes: "+record.Illness
-                              li.collection-item.primary= "Start: "+record.Start_Date.toLocaleDateString()
-                              if record.End_Date != '0000-00-00 00:00:00'
-                                li.collection-item.primary= "End: "+record.End_Date.toLocaleDateString()
-                              li.collection-item.primary= "Medication: "+record.Medication
-                              li.collection-item.primary= "Physician: "+record.Physician
-                              li.collection-item.primary= "Symptoms: "+record.Symptoms
-  script.
-    $(document).ready(function() {
-      $('.records').each(function( index ) {
-        if (!$(this).text())
-          $(this).parent().parent().parent().remove();
-      });
-    });
+              span.card-title="Patient Name: "+patient[0].PName
+              p= "HCN: "+index
+              .row
+                for record in patient
+                  .col.s12.m4
+                    .card.primary.darken-1
+                      .card-content
+                        span.card-title= "Case #: "+record.CaseN
+                        ul.collection.primary
+                          li.collection-item.primary= "Illnes: "+record.Illness
+                          li.collection-item.primary= "Start: "+record.Start_Date
+                          if record.End_Date != '0000-00-00 00:00:00'
+                            li.collection-item.primary= "End: "+record.End_Date
+                          li.collection-item.primary= "Medication: "+record.Medication
+                          li.collection-item.primary= "Physician: "+record.Physician
+                          li.collection-item.primary= "Symptoms: "+record.Symptoms
+
